[tool.poetry]
name = "pg-data-etl"
version = "0.3.8"
description = "ETL tools for spatial data stored in postgres"
authors = ["Aaron Fraint <38364429+aaronfraint@users.noreply.github.com>"]
license = "GNU v3"
readme = "README.md"
repository = "https://github.com/aaronfraint/pg-data-etl"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"
flake8 = "^3.9.0"
jupyterlab = "^3.0.14"
mkdocs-material = "^7.1.3"
mkdocstrings = "^0.15.0"
markdown-include = "^0.6.0"
mkdocs-jupyter = "^0.17.1"
python-dotenv = "^0.17.0"
psycopg2 = "^2.8.6"
GeoAlchemy2 = "^0.8.5"
geopandas = "^0.9.0"
folium = "^0.12.1"
matplotlib = "^3.4.1"
rich = "^10.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pg = "pg_data_etl.cli:main"
